add shockwave and throwing animation code

--- a/index.html
+++ b/index.html
@@ -78,7 +78,28 @@
         <div id="navi-2-effect" class="navi-effect"></div>
       </div>
       <div id="swoosh-1" class="sword-swoosh"></div>
-      <div id="swoosh-2" class="sword-swoosh"></div>
+      <div id="swoosh-2" class="sword-swoosh east"></div>
+      <div id="ball"></div>
+
+      <div id="explosion_0_0" class="explosion row_0 col_0"></div>
+      <div id="explosion_0_1" class="explosion row_1 col_0"></div>
+      <div id="explosion_0_2" class="explosion row_2 col_0"></div>
+      <div id="explosion_1_0" class="explosion row_0 col_1"></div>
+      <div id="explosion_1_1" class="explosion row_1 col_1"></div>
+      <div id="explosion_1_2" class="explosion row_2 col_1"></div>
+      <div id="explosion_2_0" class="explosion row_0 col_2"></div>
+      <div id="explosion_2_1" class="explosion row_1 col_2"></div>
+      <div id="explosion_2_2" class="explosion row_2 col_2"></div>
+      <div id="explosion_3_0" class="explosion row_0 col_3"></div>
+      <div id="explosion_3_1" class="explosion row_1 col_3"></div>
+      <div id="explosion_3_2" class="explosion row_2 col_3"></div>
+      <div id="explosion_4_0" class="explosion row_0 col_4"></div>
+      <div id="explosion_4_1" class="explosion row_1 col_4"></div>
+      <div id="explosion_4_2" class="explosion row_2 col_4"></div>
+      <div id="explosion_5_0" class="explosion row_0 col_5"></div>
+      <div id="explosion_5_1" class="explosion row_1 col_5"></div>
+      <div id="explosion_5_2" class="explosion row_2 col_5"></div>
+
       <div id="obstacle-anchor"></div>
       <div id="effect-anchor"></div>
     </div>
